--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,9 @@ main{
     padding: 15px 8px 0 0;
 }
 
+.submittedState .paragTxt{
+    margin-bottom: 15px;
+}
 /*========================
        viewport: 375px
 =========================*/
